k8s/ingress-prod/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-homebase-ingress-service
  annotations:
    kubernetes.io/ingress.class: 'public'

    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'

    # Certificate config
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - homebase.vandersangen.dev
        - vandersangen.dev
      secretName: homebase.vandersangen.dev

  rules:
    - host: homebase.vandersangen.dev
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: homebase-backend-cluster-ip-frontend
                port:
                  number: 80

    - host: vandersangen.dev
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: homebase-backend-cluster-ip-frontend
                port:
                  number: 80

    - host: lars.vandersangen.dev
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: homebase-backend-cluster-ip-frontend
                port:
                  number: 80

    - host: www.vandersangen.dev
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: homebase-backend-cluster-ip-frontend
                port:
                  number: 80
